2007-06-19  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangleselectoptions.c
	(gimp_rect_select_options_gui): set proper step and page
	increments in the scale entry for the corner radius.

2007-06-18  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpiscissorstool.c (gimp_iscissors_tool_draw): free
	live-wire Curve segment using g_slice_free().

2007-06-18  Sven Neumann  <sven@gimp.org>

	* app/file/file-open.c (file_open_from_command_line): use
	gimp_message() for error handling.

	* plug-ins/common/psd-load.c (seek_to_and_unpack_pixeldata): check
	channel dimensions to avoid potential integer overflow. Some minor
	cleanups to error messages.

2007-06-18  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/animationplay.c: applied modified patch from
	Paul Seidel that adds controls for the playback speed (bug #338380).

2007-06-18  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/oilify.c: applied patch from Daniel Richard G.
	which adds a new PDB entry with more options and improves speed
	and quality of the algorithm (bug #347075).

2007-06-16  Sven Neumann  <sven@gimp.org>

	* app/core/gimpprojection.c (gimp_projection_get_level): take the
	image size into account and return the level that is actually used.
	Fixes bug #448185.

2007-06-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/psd-save.c: coding style improvements.

2007-06-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/psd-save.c: applied patch from Eric Ross that
	changes the PSD save plug-in to save an extra data block with the
	layer names in UCS-2 encoding (bug #447267).

2007-06-15  Michael Natterer  <mitch@gimp.org>

	* app/actions/view-actions.c (view_actions_update): make sure all
	view actions are insensitive when there is no view.

2007-06-15  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/gfig/gfig-dobject.c: prepend instead of appending to
	list (patch written earlier).

2007-06-14  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdatafactory.c