@@ -55,6 +55,11 @@
 #ifdef G_OS_WIN32
 #include <fcntl.h>
 #include <io.h>
+
+#ifndef pipe
+#define pipe(fds) _pipe(fds, 4096, _O_BINARY)
+#endif
+
 #endif
 
 #ifdef G_WITH_CYGWIN
